# ai-workflow-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: README.md  basic_usage.py  human_in_loop_example.py  workflow_example.py
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_middleware.py  test_orchestrator.py  test_tools.py
workflow_agent/: __init__.py  agent.py  cli.py  config.py  models.py  utils.py
workflow_agent/middleware/: __init__.py  fallback.py  human_approval.py  retry.py
workflow_agent/tools/: __init__.py  data.py  email.py  notification.py  report.py
workflow_agent/workflows/: __init__.py  orchestrator.py  templates.py
